[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "anthropic",
    "openai",
    "fastapi",
    "httpx",
    "psycopg2-binary",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "redis",
    "sqlalchemy",
    "uvicorn[standard]",
]
